crates/ts/tests/snapshots/baseline_manifest__baseline_adding_entry_point_not_breaking.snap
---
source: crates/ts/tests/baseline_manifest.rs
expression: "manifest_diff(json!({}), json!({ \"main\": \"./dist/index.js\" }),)"
---
[]
