crates/ts/tests/snapshots/baseline_manifest__baseline_esm_to_cjs.snap
---
source: crates/ts/tests/baseline_manifest.rs
expression: "manifest_diff(json!({ \"type\": \"module\" }), json!({}),)"
---
- field: type
  change_type: ModuleSystemChanged
  is_breaking: true
  description: "Package switched from ESM to CJS (`\"type\": \"module\"` removed). `import` consumers will break."
  before: module
  after: commonjs
